# MyLogger

./: README.md  README_zh.md
example/: CMakeLists.txt  main.cpp
include/MyLogger/: formatter-inl.hpp  formatter.hpp  level.hpp  logger-inl.hpp  logger.hpp  loglevel.hpp  logwriter-inl.hpp  logwriter.hpp  threadspool-inl.hpp  threadspool.hpp
src/MyLogger/: formatter.cpp  logger.cpp  logwriter.cpp  threadspool.cpp
